/**
 * Circulo
 */
public class Circulo {

    public void dibujar() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'dibujar'");
    }

}
