/**
 * Cuadro
 */
public class Cuadro {

    public void dibujar() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'dibujar'");
    }

}
