/**
 * Triangulo
 */
public class Triangulo {

    public void dibujar() {
        // TODO Auto-generated method stub
        throw new UnsupportedOperationException("Unimplemented method 'dibujar'");
    }

}
